// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a simple component with no errors 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  onError={[Function]}
  style={undefined}
>
  Just a test
</Text>
`;

exports[`renders an ErrorView 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
      }
    }
  >
    code
     - 
    message
  </Text>
</View>
`;

exports[`renders the errors from its child 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
      }
    }
  >
    [ERROR_CODE]
     - 
    [ERROR_MESSAGE]
  </Text>
</View>
`;
